hphp/test/slow/array/fpassm_mw3.php.expectf

Fatal error: Can't use [] for reading in %s/test/slow/array/fpassm_mw3.php on line 7
